--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
   
-dlib==19.16.0
-imutils==0.5.2
-numpy==1.15.4
-opencv-python==4.0.0.21
-playsound==1.2.2
-scipy==1.2.0
+# dlib==19.16.0
+# imutils==0.5.2
+# numpy==1.15.4
+# opencv-python==4.0.0.21
+# playsound==1.2.2
+# scipy==1.2.0
+
+pyttsx3
+SpeechRecognition
+wikipedia-api
+requests
+pyjokes
+pywhatkit
+pyautogui
+googletrans==4.0.0-rc1
+beautifulsoup4
+ecapture
+wifi
+wolframalpha
+datetime  # This is usually included in Python's standard library, but can be specified if needed.
